# DataAnalys

./: CMakeLists.txt  README.md
density_distribution_analysis/: CMakeLists.txt  calcunit.cpp  calcunit.h  chartview.cpp  chartview.h  main.cpp  main_window.cpp  main_window.h  parametersinputdialog.h
distribution_analysis/: CMakeLists.txt  calcunit.cpp  calcunit.h  chartview.cpp  chartview.h  main.cpp  mainwidget.cpp  mainwidget.h
least_square_method/: CMakeLists.txt  calcunit.cpp  calcunit.h  chartview.h  widget.cpp  widget.h
random_distribution_estimates/: CMakeLists.txt  calcunit.cpp  calcunit.h  chartview.h  widget.cpp  widget.h
random_variable_analysis/: CMakeLists.txt  calcunit.cpp  calcunit.h  widget.cpp  widget.h
